--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fit-pulse",
+  "name": "punkweb-react",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -22,8 +22,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
     "react-router": "^6.22.3",
-    "react-router-dom": "^6.22.3",
-    "recharts": "^2.12.3"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.29",
